--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,12 @@ a:active {
 }
 
 
+img {
+  width: 10px,
+  height: auto
+}
+
+
 .location-holder, .media-holder {
   width: 100%;
   margin: 4rem 0;
