--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ main {
 .firstcharacter {
   color: #8e6c88;
   float: left;
-    font-family: 'Abril Fatface', cursive;
+  font-family: 'Abril Fatface', cursive;
   font-size: 3rem;
   line-height: 2rem;
   padding-top: .5rem;
@@ -109,10 +109,81 @@ a:active {
 }
 
 
-img {
-  width: 10px,
-  height: auto
+.skip {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
 }
+
+.skip:focus {
+  /*position: static;
+  width: auto;
+  height: auto;
+  */
+   width: unset;
+  height: unset;
+  position: relative;
+  padding: unset;
+  margin: unset;
+  font-size: 2rem;
+}
+
+
+
+/*
+
+button {
+  background-color: #8e6c88;
+  border-color: lightgray;
+  border-radius: 5pt;
+  color: lightgray;
+  min-width: 5rem;
+  font-family: 'Roboto Slab', serif;
+}*/
+.button_holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+button {
+ background-color: #8e6c88;
+  border-color: lightgray;
+  min-width: 5rem;
+border-radius: 5pt;
+  color: lightgray;
+  font-family: 'Roboto Slab', serif;
+}
+
+.gallery-image {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  margin: 1rem auto;
+  width: 100%;
+  max-width: 1000px;
+}
+
+.gallery-image img {
+  width: 100%;
+}
+
+figcaption {
+  margin: 0.5rem;
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.hideThis {
+  display: none;
+}
+
+
+
 
 
 .location-holder, .media-holder {
