--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,13 @@ ul, ol {
   margin-block-end: 0px;
 }
 
+ul {
+  text-align: center;
+  list-style-position: inside;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 1.0em;
+}
+
 nav li, nav li a {
   width: 100%;
   text-align: center;
@@ -38,6 +45,11 @@ nav li, nav li a {
   font-weight: bold;
 }
 
+.imgcenter {
+   display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 body {
   margin: 40px;
@@ -53,6 +65,7 @@ main {
   box-sizing: border-box;
   margin: 1rem auto;
 }
+
 
 
 .firstcharacter {
@@ -77,6 +90,18 @@ h2 {
 }
 h3 {
   color: darkgrey;
+}
+h4 {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 2.5em;
+  font-weight: normal;
+  text-align: center;
+}
+h5 {
+  text-decoration: underline;
+  text-align: right;
+  font-size: .5em;
+  color: blue;
 }
 p {
   color: black;
